--- a/notething/src/main/resources/org/fxml/primary.fxml
+++ b/notething/src/main/resources/org/fxml/primary.fxml
@@ -66,7 +66,8 @@
                   <Insets left="5.0" right="2.0" />
                </padding>
             </HBox>
-            <TextArea fx:id="noteContent" wrapText="true" VBox.vgrow="ALWAYS" styleClass="content-area" promptText="Viết ghi chú..."/>
+            
+            <StackPane fx:id="editorContainer" VBox.vgrow="ALWAYS" styleClass="editor-container" />
          </children>
          <padding>
             <Insets bottom="0.0" left="0.0" right="0.0" top="0.0" />
