fix: fix blur for xfce on linux

--- a/notething/src/main/resources/org/css/styles.css
+++ b/notething/src/main/resources/org/css/styles.css
@@ -44,8 +44,8 @@
 
 /* ===== BASE STYLES ===== */
 .root {
-    /* Mặc định cho Scene */
-    -fx-background-color: -note-bg-color;
+    /* Quan trọng: Để nền Scene là trong suốt, tránh khối màu trắng/đen che khuất Blur trên Linux */
+    -fx-background-color: transparent;
 }
 
 .sticky-note-root {
