--- a/notething/src/main/resources/org/fxml/notelist.fxml
+++ b/notething/src/main/resources/org/fxml/notelist.fxml
@@ -123,7 +123,7 @@
                                     </HBox>
                                     
                                     <!-- Hàng: Acrylic -->
-                                    <HBox alignment="CENTER_LEFT">
+                                    <HBox fx:id="acrylicSettingBox" alignment="CENTER_LEFT">
                                        <children>
                                           <Label text="Hiệu ứng kính mờ" />
                                           <Region HBox.hgrow="ALWAYS" />
